--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <section id="banner">
         <img src="image/ebb.png" class="logo">
         <div class="nom">
-            <h1>EL Mehdi Bouabbadi</h1>
-            <p>Programmer and desiner web development</p>
+            <h1>Welcom to my web site</h1>
+            <p>I'm EL MEHDI BOUABBADI, Programmer Web Developemnet 
+                        and desiner</p>
             <div class="pagge">
                 <a href="https://www.facebook.com/ebouabba/"><span></span>Facebook</a>
                 <a href="https://github.com/ebouabba"><span></span>Github</a>
