--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id="banner">
-        <img src="image/ebb.png" class="logo">
+        <!-- <img src="image/ebb.png" class="logo"> -->
         <div class="nom">
             <h1>Welcom to my web site</h1>
             <p>I'm EL MEHDI BOUABBADI, Programmer Web Developemnet 
