--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <p>I'm EL MEHDI BOUABBADI, Programmer Web Developemnet 
                         and desiner</p>
             <div class="pagge">
-                <a href="https://www.facebook.com/ebouabba/"><span></span>Facebook</a>
-                <a href="https://github.com/ebouabba"><span></span>Github</a>
-                <a href="https://www.linkedin.com/in/el-mehdi-bouabbadi-82227a233/"><span></span>Linkedin</a>
-                <a href="https://www.instagram.com/ebouabba/"><span></span>Instagram</a>
+                <a href="https://www.facebook.com/ebouabba/" target="_blank"><span></span>Facebook</a>            </div>
+                <a href="https://github.com/ebouabba" target="_blank"><span></span>Github</a>
+                <a href="https://www.linkedin.com/in/el-mehdi-bouabbadi-82227a233/" target="_blank"><span></span>Linkedin</a>
+                <a href="https://www.instagram.com/ebouabba/" target="_blank"><span></span>Instagram</a>
 
             </div>
         </div>
