--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <section id="banner">
         <!-- <img src="image/ebb.png" class="logo"> -->
         <div class="nom">
-            <h1>Welcom to my web site</h1>
-            <p>I'm EL MEHDI BOUABBADI, Programmer Web Developemnet
-                and desiner</p>
+            <h1>About Me</h1>
+            <p>My name is <b>Mehdi</b>. I am a software engineer. <br>
+                I am 23 years old and live in Oued zem.</p>
             <div class="pagge">
 
                 <a target="_blank" href="https://www.facebook.com/ebouabba/"><span></span>Facebook</a>
